hopefully fixed whitespace bug for ios browsers

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@ body, html {
     padding: 0;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
     font-family: Roboto mono;
     font-weight: 400;
     text-rendering: optimizeLegibility;
@@ -145,6 +146,7 @@ h1 {
     display: block;
     margin: 0 auto;
     transform: scale(.9);
+    border-radius: 10px;
 }
 
 .portfolio_grid > div > img:hover {
@@ -232,12 +234,13 @@ h1 {
     transition: all .4s ease-in-out;
     padding: 0;
     border: 2px solid rgb(255, 255, 255);
-    mix-blend-mode: exclusion;
+    border-radius: 10px;
 }
 
 .home_btn:hover {
     cursor: pointer;
     background-color: white;
+    transform: translateY(3px);
 }
 
 #home_btn_white_pages {
@@ -257,12 +260,14 @@ h1 {
     border: 2px solid rgb(0, 0, 0);
     font-size:40px;
     float: left;
+    border-radius: 10px;
     transition: all .4s ease-in-out;
 }
 
 .menu_btn:hover {
     background-color: rgb(0, 0, 0);
     color: white;
+    transform: translateY(3px);
 }
 
 #port_btn {
@@ -511,6 +516,7 @@ h1 {
         border-width: 1px;
         font-size: 20px;
         border-width: 1px;
+        border-radius: 5px;
     }
 
     .footer {
@@ -520,19 +526,10 @@ h1 {
         font-size: 5px;
     }
 
-    #collection_list {
-        position: absolute;
-        padding: 10px;
-        box-sizing: border-box;
-        background-color: rgb(255, 0, 0);
-    }
-    
-    #collection_list > a {
-        font-size: 15px;
-    }
     .home_btn {
         height: 36px;
         border: 1px solid rgb(255, 255, 255);
+        border-radius: 5px;
     }
 
     #book_holder > div {
